--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,8 @@ footer-links:
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
 
+excerpt_separator: <!--more-->
+
 # CUSTOMIZE
 # Your website URL (e.g. https://ossd-sp22.github.io/weekly )
 # Replace the last part by the name of your own repository.
